updates fixes
