# controllers/pizzas.js
@@ -1,33 +1,34 @@
 const { client } = require('../db/connection');
 const { ObjectId } = require('mongodb');
 
-/***************************** 
-Function to get all pizzas
+/*****************************
+ Function to get all pizzas
 ******************************/
 const getAllPizzas = async (req, res) => {
   try {
-    // Query the pizzas collection in pizzaReadersDB and convert results to an array
-    const pizza = await client.db('pizzaReviewDB').collection('pizzas').find().toArray();
-    res.json({ pizza });
+    const pizzas = await client
+      .db('pizzaReviewDB')
+      .collection('pizzas')
+      .find()
+      .toArray();
+    res.json({ pizzas });
   } catch {
     res.status(500).json({ error: 'Server Error' });
   }
 };
 
-/***************************** 
-Function to get pizza by id
+/*****************************
+ Function to get pizza by id
 ******************************/
 const getPizzaById = async (req, res) => {
-  // Get id from url
   const id = req.params.id;
-  // Checks if id is valid MongoDB ObjectId
   if (!ObjectId.isValid(id)) {
     return res.status(400).json({ error: 'Invalid ID format' });
   }
 
   const pizza = await client
     .db('pizzaReviewDB')
-    .collection('pizzas')
+    .collection('pizza')
     .findOne({ _id: new ObjectId(id) });
 
   if (!pizza) {
@@ -36,49 +37,50 @@ const getPizzaById = async (req, res) => {
   res.json(pizza);
 };
 
-/***************************** 
-POST/create pizza function
+/*****************************
+ Function to create pizza
 ******************************/
 const createPizza = async (req, res) => {
-  // Creating newPizza object
   const newPizza = {
     name: req.body.name,
     brand: req.body.brand,
     description: req.body.description,
-    createdDate: req.body.createdDate,
-    updatedDate: req.body.updatedDate
+    createdDate: new Date(),
+    updatedDate: new Date(),
   };
 
-  // Inserting into database
-  const result = await client.db('pizzaReviewDB').collection('pizzas').insertOne(newPizza);
-  if (result.acknowledged) {
-    res.status(201).json({ id: result.insertedId });
-  } else {
-    res.status(500).json(result.error || 'Failed to create pizza.');
-  }
-};
-
-/***************************** 
-PUT-update pizza function
-******************************/
-const updatePizza = async (req, res) => {
-  // Gets the id from URL
-  const pizzaId = req.params.id;
-
-  // Creating updatedPizza object
-  const updatedPizza = {
-    name: req.body.name,
-    brand: req.body.brand,
-    description: req.body.description,
-    createdDate: req.body.createdDate,
-    updatedDate: req.body.updatedDate
-  };
-
-  // Storing it into database
   const result = await client
     .db('pizzaReviewDB')
     .collection('pizzas')
-    .updateOne({ _id: new ObjectId(pizzaId) }, { $set: updatedPizza });
+    .insertOne(newPizza);
+  if (result.acknowledged) {
+    res.status(201).json({ id: result.insertedId });
+  } else {
+    res.status(500).json({ error: 'Failed to create pizza' });
+  }
+};
+
+/*****************************
+ Function to update pizza
+******************************/
+const updatePizza = async (req, res) => {
+  const id = req.params.id;
+  if (!ObjectId.isValid(id)) {
+    return res.status(400).json({ error: 'Invalid ID format' });
+  }
+
+  const updatedPizza = {
+    name: req.body.name,
+    level: req.body.level,
+    description: req.body.description,
+    updatedDate: new Date(),
+  };
+
+  const result = await client
+    .db('pizzaReviewDB')
+    .collection('pizzas')
+    .updateOne({ _id: new ObjectId(id) }, { $set: updatedPizza });
+
   if (result.matchedCount > 0) {
     res.status(204).send();
   } else {
@@ -86,22 +88,20 @@ const updatePizza = async (req, res) => {
   }
 };
 
-/***************************** 
-DELETE Pizza function
+/*****************************
+ Function to delete pizza
 ******************************/
 const deletePizza = async (req, res) => {
-  // Getting pizzaId from URL
-  const pizzaId = req.params.id;
-
-  if (!ObjectId.isValid(pizzaId)) {
-    return res.status(400).json({ error: 'Invalid ID' });
+  const id = req.params.id;
+  if (!ObjectId.isValid(id)) {
+    return res.status(400).json({ error: 'Invalid ID format' });
   }
 
-  // Delete pizza from database
   const result = await client
     .db('pizzaReviewDB')
     .collection('pizzas')
-    .deleteOne({ _id: new ObjectId(pizzaId) });
+    .deleteOne({ _id: new ObjectId(id) });
+
   if (result.deletedCount > 0) {
     res.status(200).send();
   } else {
@@ -109,4 +109,10 @@ const deletePizza = async (req, res) => {
   }
 };
 
-module.exports = { getAllPizzas, getPizzaById, createPizza, updatePizza, deletePizza };
+module.exports = {
+  getAllPizzas,
+  getPizzaById,
+  createPizza,
+  updatePizza,
+  deletePizza,
+};
