# swagger.json
@@ -2,13 +2,13 @@
   "swagger": "2.0",
   "info": {
     "title": "Pizza Review App",
-    "description": "Use GitHub login to review and favorite pizzas",
+    "description": "Use GitHub login to manage pizza reviews and favorites",
     "version": "1.0.0"
   },
-  "host": "localhost:3000",
+  "host": "pizza-review-app.onrender.com",
   "basePath": "/",
   "schemes": [
-    "http"
+    "https"
   ],
   "securityDefinitions": {
     "JWT": {
@@ -60,12 +60,6 @@
                   "example": "any"
                 },
                 "commentReview": {
-                  "example": "any"
-                },
-                "createdDate": {
-                  "example": "any"
-                },
-                "updatedDate": {
                   "example": "any"
                 },
                 "priceRating": {
@@ -139,12 +133,6 @@
                   "example": "any"
                 },
                 "commentReview": {
-                  "example": "any"
-                },
-                "createdDate": {
-                  "example": "any"
-                },
-                "updatedDate": {
                   "example": "any"
                 },
                 "priceRating": {
@@ -224,12 +212,6 @@
                 },
                 "description": {
                   "example": "any"
-                },
-                "createdDate": {
-                  "example": "any"
-                },
-                "updatedDate": {
-                  "example": "any"
                 }
               }
             }
@@ -292,16 +274,10 @@
                 "name": {
                   "example": "any"
                 },
-                "brand": {
+                "level": {
                   "example": "any"
                 },
                 "description": {
-                  "example": "any"
-                },
-                "createdDate": {
-                  "example": "any"
-                },
-                "updatedDate": {
                   "example": "any"
                 }
               }
@@ -375,12 +351,6 @@
                 },
                 "reviewId": {
                   "example": "any"
-                },
-                "createdDate": {
-                  "example": "any"
-                },
-                "updatedDate": {
-                  "example": "any"
                 }
               }
             }
@@ -419,52 +389,6 @@
           },
           "400": {
             "description": "Bad Request"
-          },
-          "404": {
-            "description": "Not Found"
-          }
-        }
-      },
-      "put": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "pizzaId": {
-                  "example": "any"
-                },
-                "reviewId": {
-                  "example": "any"
-                },
-                "createdDate": {
-                  "example": "any"
-                },
-                "updatedDate": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "204": {
-            "description": "No Content"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "401": {
-            "description": "Unauthorized"
           },
           "404": {
             "description": "Not Found"
@@ -527,9 +451,6 @@
                 },
                 "email": {
                   "example": "any"
-                },
-                "oAuth": {
-                  "example": "any"
                 }
               }
             }
@@ -581,39 +502,6 @@
         }
       }
     },
-    "/users/login": {
-      "post": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "email": {
-                  "example": "any"
-                },
-                "password": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "401": {
-            "description": "Unauthorized"
-          }
-        }
-      }
-    },
     "/": {
       "get": {
         "description": "",
@@ -646,9 +534,6 @@
                   "example": "any"
                 },
                 "email": {
-                  "example": "any"
-                },
-                "oAuth": {
                   "example": "any"
                 }
               }
@@ -709,16 +594,13 @@
             "schema": {
               "type": "object",
               "properties": {
-                "pizzaId": {
+                "name": {
                   "example": "any"
                 },
-                "reviewId": {
+                "level": {
                   "example": "any"
                 },
-                "createdDate": {
-                  "example": "any"
-                },
-                "updatedDate": {
+                "description": {
                   "example": "any"
                 }
               }
@@ -798,39 +680,6 @@
           }
         }
       }
-    },
-    "/login": {
-      "post": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "email": {
-                  "example": "any"
-                },
-                "password": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "401": {
-            "description": "Unauthorized"
-          }
-        }
-      }
     }
   },
   "definitions": {
@@ -872,7 +721,7 @@
         },
         "rating": {
           "type": "string",
-          "example": "integer"
+          "example": "number"
         },
         "commentReview": {
           "type": "string",
@@ -888,7 +737,7 @@
         },
         "priceRating": {
           "type": "string",
-          "example": "integer"
+          "example": "number"
         }
       }
     },
@@ -924,7 +773,7 @@
           "type": "string",
           "example": "string"
         },
-        "oAuth": {
+        "githubId": {
           "type": "string",
           "example": "string"
         },
@@ -933,19 +782,6 @@
           "example": "string"
         },
         "updatedDate": {
-          "type": "string",
-          "example": "string"
-        }
-      }
-    },
-    "Login": {
-      "type": "object",
-      "properties": {
-        "email": {
-          "type": "string",
-          "example": "string"
-        },
-        "password": {
           "type": "string",
           "example": "string"
         }
