# validators/favoritesValidator.js
@@ -2,10 +2,8 @@ const validator = require('../helpers/validate');
 
 const favoriteValidation = (req, res, next) => {
   const validationRules = {
-    pizzaId: 'required|regex:/^[0-9a-fA-F]{24}$/',
-    reviewId: 'required|regex:/^[0-9a-fA-F]{24}$/',
-    createdDate: 'required|date',
-    updatedDate: 'required|date'
+    pizzaId: 'required|string|regex:/^[0-9a-fA-F]{24}$/',
+    reviewId: 'required|string|regex:/^[0-9a-fA-F]{24}$/'
   };
   validator(req.body, validationRules, {}, (err, status) => {
     if (!status) {
