# validators/reviewsValidator.js
@@ -2,20 +2,18 @@ const validator = require('../helpers/validate');
 
 const reviewValidation = (req, res, next) => {
   const validationRules = {
-    userId: 'required|regex:/^[0-9a-fA-F]{24}$/',
-    pizzaId: 'required|regex:/^[0-9a-fA-F]{24}$/',
-    rating: 'required|integer|min:1|max:5',
+    userId: 'required|string|regex:/^[0-9a-fA-F]{24}$/',
+    pizzaId: 'required|string|regex:/^[0-9a-fA-F]{24}$/',
+    rating: 'required|numeric|min:1|max:5',
     commentReview: 'required|string',
-    createdDate: 'required|date',
-    updatedDate: 'required|date',
-    priceRating: 'required|integer|min:1|max:5'
+    priceRating: 'required|numeric|min:1|max:5',
   };
   validator(req.body, validationRules, {}, (err, status) => {
     if (!status) {
       res.status(400).send({
         success: false,
         message: 'Validation failed',
-        data: err
+        data: err,
       });
     } else {
       next();
